--- a/src/style/training.css
+++ b/src/style/training.css
@@ -1,5 +1,4 @@
 
-
 .apple{
   position:relative;
   background: url('../background/square.png');
@@ -8,13 +7,20 @@
   border-style: solid;
   width: 55px;
   height: 55px;
-  left: 47px;
-  margin-top: 638px;
+  left: -337px;
+  margin-top: 310px;
   margin-left: 7px;
   float: left;
   Display: flex;
   Align-Items: center;
   Justify-Content: center;
+}
+
+.training_text{
+  margin-top: 140px;
+  margin-left: 390px;
+  font-size: 21px;
+  font-family: Arial;
 }
 
 .appleSug{
@@ -25,9 +31,9 @@
   border-style: solid;
   width: 55px;
   height: 55px;
-  margin-top: 300px;
-  margin-left: 50px;
-  left: 179px;
+  margin-top: -20px;
+  margin-left: 70px;
+  left: -175px;
   float: left;
   Display: flex;
   Align-Items: center;
@@ -37,12 +43,12 @@
 .feedback{
   position:absolute;
   left: -15px;
-  margin-top: 220px;
+  margin-top: -150px;
 }
 
 .training_1{
   position:absolute;
-  background: url('../images_training/training_1.png');
+  background: url('../images_training/training_1_empty.png');
   background-repeat: no-repeat;
   width: 1000px;
   height: 1000px;
@@ -51,7 +57,7 @@
 
 .training_2{
   position:absolute;
-  background: url('../images_training/training_2.png');
+  background: url('../images_training/training_2_empty.png');
   background-repeat: no-repeat;
   width: 1000px;
   height: 1000px;
@@ -60,7 +66,7 @@
 
 .training_3{
   position:absolute;
-  background: url('../images_training/training_3.png');
+  background: url('../images_training/training_3_empty.png');
   background-repeat: no-repeat;
   width: 1000px;
   height: 1000px;
@@ -69,7 +75,7 @@
 
 .training_4{
   position:absolute;
-  background: url('../images_training/training_4.png');
+  background: url('../images_training/training_4_empty.png');
   background-repeat: no-repeat;
   width: 1000px;
   height: 1000px;
