--- a/src/style/slides.css
+++ b/src/style/slides.css
@@ -206,7 +206,7 @@
 
 .slide_21{
   position:absolute;
-  background: url('../instructions/slides/slide_empty_1arrow.png');
+  background: url('../instructions/slides/slide_empty_2arrows.png');
   background-repeat: no-repeat;
   width: 1000px;
   height: 1000px;
@@ -216,6 +216,15 @@
 .slide_22{
   position:absolute;
   background: url('../instructions/slides/slide_empty_1arrow.png');
+  background-repeat: no-repeat;
+  width: 1000px;
+  height: 1000px;
+  background-size:800px;
+}
+
+.slide_no_arrow{
+  position:absolute;
+  background: url('../instructions/slides/slide_empty_0arrow_big.png');
   background-repeat: no-repeat;
   width: 1000px;
   height: 1000px;
