--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,3 +5,179 @@
   width: 1000px;
   height: 1000px;
 }
+
+.IntroConsentText{
+  font: "Century Gothic", Futura, sans-serif;
+  font-size  : 3vh;
+  margin-top : 2vh;
+  margin-left: 2vh;
+}
+
+
+.IntroText{
+  font: "Century Gothic", Futura, sans-serif;
+  font-size  : 14vh;
+  margin-top : 3%;
+  margin-left: 3%;
+}
+
+.QuizBlock{
+  font: "Century Gothic", Futura, sans-serif;
+  background: white;
+  font-size  : 3vh;
+  padding: 10px;
+  margin-top: 0;
+  margin-left:0;
+  margin-right:0;
+  text-align: center;
+  background-size:'cover';
+  background-repeat: 'no-repeat';
+}
+
+.SurveyIntroText{
+  font: "Century Gothic", Futura, sans-serif;
+  font-size  : 3vh;
+  margin-top : 2vh;
+  margin-bottom: 5vh;
+  margin-left: 2vh;
+  border-width: 0.5vh;
+}
+
+.translate {
+  margin-top: 1%;
+}
+
+.buttonStart{
+  position: center;
+  width: 2vh;
+  height: 5vh;
+  margin: 0 auto;
+  background: green;
+  border-radius: 0.5vh;
+  font-size: 5vh;
+}
+
+
+.container {
+  position: relative;
+  max-width: 800px;
+  margin: 0 auto;
+  background: #fff;
+  border-radius: 3px;
+}
+
+@media (min-width: 769px) {
+  .container {
+    margin: 2.5rem auto;
+  }
+}
+
+/* Result Component */
+.result {
+  padding: 1.5rem 2.5rem;
+}
+
+/* Quiz Component */
+.answerOptions {
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+/* QuestionCount Component */
+.questionCount {
+  padding: 1.5rem 2.5rem 0;
+  font-size: 80%;
+}
+
+/* Question Component */
+.question {
+  font-size: 100%;
+  margin: 0;
+  padding: 1.5rem 2.5rem 1.5rem 2.5rem;
+}
+
+/* AnswerOption Component */
+.answerOption {
+  border-top: 0.5px solid #eee;
+}
+
+.answerOption:hover {
+  background-color: #eefbfe;
+}
+
+.radioCustomButton {
+  position: absolute;
+  width: auto;
+  opacity: 0;
+}
+
+.radioCustomButton,
+.radioCustomLabel {
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.radioCustomLabel {
+  position: relative;
+  width: 110%;
+  margin: 0;
+  padding: 1.5rem 2.5rem 1.5rem 5rem;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.radioCustomButton ~ .radioCustomLabel:before {
+  position: absolute;
+  width: 110%;
+
+  top: 20px;
+  left: 38px;
+  width: 28px;
+  height: 28px;
+  content: '';
+  display: inline-block;
+  vertical-align: middle;
+  background: #fff;
+  border: 1px solid #bbb;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+
+.radioCustomButton:checked ~ .radioCustomLabel:before {
+  content: '';
+  background: #8bc53f url(../svg/icon-check.svg) no-repeat;
+  background-size: 27px;
+  border-color: #8bc53f;
+}
+
+/* Animation */
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out 0.3s;
+}
+
+.fade-leave {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 1;
+}
+
+.fade-leave.fade-leave-active {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.fade-appear {
+  opacity: 0;
+}
+
+.bold { font-weight: bold; }
