--- a/src/style/intro.css
+++ b/src/style/intro.css
@@ -4,7 +4,7 @@
 
 .IntroConsentText{
   font: "Century Gothic", Futura, sans-serif;
-  font-size  : 3vh;
+  font-size  : 16;
   margin-top : 2vh;
   margin-left: 2vh;
 }
