--- a/src/style/slides.css
+++ b/src/style/slides.css
@@ -1,10 +1,16 @@
 
 .slide_text{
-  position:absolute;
-  margin-top: 100px;
+  position:relative;
+  margin-top: -690px;
   margin-left: 90px;
   font-size: 21px;
   font-family: Arial;
+}
+
+.slide_im{
+  position:absolute;
+  margin-top: 0px;
+  margin-left: 0px;
 }
 
 .slide_text_after_training{
@@ -13,308 +19,4 @@
   margin-left: 90px;
   font-size: 21px;
   font-family: Arial;
-}
-
-.slide_6{
-  position:absolute;
-  background: url('../instructions/slides/slide6.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_6_{
-  position:absolute;
-  background: url('../instructions/slides/slide6.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_7{
-  position:absolute;
-  background: url('../instructions/slides/slide7.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_7_{
-  position:absolute;
-  background: url('../instructions/slides/slide7.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_8{
-  position:absolute;
-  background: url('../instructions/slides/slide8.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_8_{
-  position:absolute;
-  background: url('../instructions/slides/slide8.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_9{
-  position:absolute;
-  background: url('../instructions/slides/slide9.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_9_{
-  position:absolute;
-  background: url('../instructions/slides/slide9.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_10{
-  position:absolute;
-  background: url('../instructions/slides/slide10.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_10_{
-  position:absolute;
-  background: url('../instructions/slides/slide10.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_11{
-  position:absolute;
-  background: url('../instructions/slides/slide11.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_11_{
-  position:absolute;
-  background: url('../instructions/slides/slide11.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_12{
-  position:absolute;
-  background: url('../instructions/slides/slide12.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_12_{
-  position:absolute;
-  background: url('../instructions/slides/slide12.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_13{
-  position:absolute;
-  background: url('../instructions/slides/slide13.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_13_{
-  position:absolute;
-  background: url('../instructions/slides/slide13.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_14{
-  position:absolute;
-  background: url('../instructions/slides/slide14.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_14_{
-  position:absolute;
-  background: url('../instructions/slides/slide14.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_15{
-  position:absolute;
-  background: url('../instructions/slides/slide15.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_15_{
-  position:absolute;
-  background: url('../instructions/slides/slide15.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_16{
-  position:absolute;
-  background: url('../instructions/slides/slide16.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_16_{
-  position:absolute;
-  background: url('../instructions/slides/slide16.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_17{
-  position:absolute;
-  background: url('../instructions/slides/slide17.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_17_{
-  position:absolute;
-  background: url('../instructions/slides/slide17.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_18{
-  position:absolute;
-  background: url('../instructions/slides/slide18.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_18_{
-  position:absolute;
-  background: url('../instructions/slides/slide18.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_2_arrows{
-  position:absolute;
-  background: url('../instructions/slides/slide_empty_2arrows.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_2_arrows_{
-  position:absolute;
-  background: url('../instructions/slides/slide_empty_2arrows.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_1_arrow{
-  position:absolute;
-  background: url('../instructions/slides/slide_empty_1arrow.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_1_arrow_{
-  position:absolute;
-  background: url('../instructions/slides/slide_empty_1arrow.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
-}
-
-.slide_no_arrow{
-  position:absolute;
-  background: url('../instructions/slides/slide_empty_0arrow_big.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-}
-
-.slide_no_arrow_{
-  position:absolute;
-  background: url('../instructions/slides/slide_empty_0arrow_big.png');
-  background-repeat: no-repeat;
-  width: 1000px;
-  height: 1000px;
-  background-size:800px;
-  display: none;
 }
