--- a/src/style/training.css
+++ b/src/style/training.css
@@ -1,7 +1,7 @@
 
 .apple{
   position:relative;
-  background: url('../background/square.png');
+  background: url('http://www.brainexplorer.net/MF/square.png');
   border-width: thin;
   border-color: black;
   border-style: solid;
