--- a/src/style/intro.css
+++ b/src/style/intro.css
@@ -5,14 +5,14 @@
 .IntroConsentText{
   font: "Century Gothic", Futura, sans-serif;
   font-size  : 16;
-  margin-top : 2vh;
-  margin-left: 2vh;
+  margin-top : 4vh;
+  text-align: left;
 }
 
 .bold { font-weight: bold; }
 
 .place-middle{
-  max-width: 1000px;
+  max-width: 850px;
   margin-left: auto;
   margin-right: auto;
 }
