--- a/src/style/juice.css
+++ b/src/style/juice.css
@@ -3,3 +3,19 @@
   margin-top: 0px;
   margin-left: 0px;
 }
+
+.juice_text{
+  position:relative;
+  top: -650px;
+  left: 400px;
+  margin-right: -100px;
+  font-size: 24px;
+  font-family: Arial;
+}
+
+.amount{
+  position:relative;
+  top: -40px;
+  left: 65px;
+  font-size: 24px;
+}
